--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
   --bg-color-dark: #000000;
   --bg-color-light: #C9F31D;
   --text-color-light: #FFFFFF;
-  --text-color-blacK:: #3e3e3e;
+  --text-color-blacK: #3e3e3e;
 ;
   --text-color-green: #C9F31D;
 
@@ -20,6 +20,6 @@
   --h4: 700 0.8rem/100% var(--font-family);  
   --text-lg: 400 1.5rem/130% var(--font-family);
   --text-md: 400 1.2rem/100% var(--font-family);
-  --text-sm: 400 0.7rem/150% var(--font-family); 
+  --text-sm: 400 1rem/168% var(--font-family); 
 
 }
